--- a/frontend-study/react-app/src/styles/shop/layout.scss
+++ b/frontend-study/react-app/src/styles/shop/layout.scss
@@ -18,6 +18,7 @@
     justify-content: space-around;
     align-items: center;
     background: white;
+    box-shadow: 0px -10px 10px -10px #f4f4f4;
 
     .footer-btn-group {
       cursor: pointer;
