--- a/frontend-study/react-app/src/styles/shop/product-item.scss
+++ b/frontend-study/react-app/src/styles/shop/product-item.scss
@@ -11,6 +11,8 @@
   background-color: white;
 
   .banner {
+    min-height: 200px;
+    min-width: 100%;
     width: 100%;
     height: 100%;
     border-radius: 0.4rem 0.4rem 0 0;
@@ -69,5 +71,13 @@
       color: white;
       border-color: #fe6102;
     }
+  }
+}
+
+.ant-image-placeholder {
+
+  .ant-skeleton {
+    width: 100% !important;
+    height: 100%;
   }
 }
